feat: Instruction, Question, ContentBank, Topic with Hexagonal Arch