@@ -3,12 +3,11 @@ package ai.snippetquiz.core_service.contentbank.adapter.out.repository;
 import ai.snippetquiz.core_service.contentbank.adapter.out.entities.ContentEntryBankEntity;
 import ai.snippetquiz.core_service.contentbank.adapter.out.mapper.ContentEntryBankMapper;
 import ai.snippetquiz.core_service.contentbank.domain.model.ContentEntryBank;
-import ai.snippetquiz.core_service.contentbank.domain.port.out.ContentEntryBankRepository;
+import ai.snippetquiz.core_service.contentbank.domain.port.ContentEntryBankRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -27,7 +26,7 @@ public class JpaContentEntryBankRepositoryAdapter implements ContentEntryBankRep
         return jpaContentEntryBankRepository.findByContentBankId(contentBankId)
                 .stream()
                 .map(contentEntryBankMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -35,7 +34,7 @@ public class JpaContentEntryBankRepositoryAdapter implements ContentEntryBankRep
         return jpaContentEntryBankRepository.findByContentEntryId(contentEntryId)
                 .stream()
                 .map(contentEntryBankMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
